
check_PROGRAMS=vector cvector

vector_SOURCES=main.c vector_tests.c vector_i.c \
	vector_d.c vector_str.c vector_void.c \
	vector_all.h \
	vector_i.h \
	vector_d.h \
	vector_str.h \
	vector_void.h \
	vector_short.h \
	vector_f_struct.h \
	test_types.h

cvector_SOURCES=main.c vector_tests.c cvector.h
cvector_CFLAGS = -DTESTING_CVECTOR_H
